--- a/src/components/itemSection.scss
+++ b/src/components/itemSection.scss
@@ -10,7 +10,7 @@
     font-family: "Poppins";
     font-weight: 100;
     padding: 0px 10px;
-    margin: 50px 0 0 0;
+    margin: 20px 0 0 0;
   }
 
   .items {
